@@ -67,10 +67,6 @@ install-data-hook:
 
 # Maintainer targets
 
-update-po: refresh-po
-	git-update-index --add `ls po/*.po | grep -v quot.po` || true && \
-	git-commit -m "Sync with TP." po/LINGUAS `ls po/*.po | grep -v quot.po`
-
 .PHONY: examples
 examples:
 	(cd examples && make)
