@@ -27,9 +27,19 @@ gtk-doc.make:
 	gtkdocize
 
 autoreconf: gtk-doc.make
+	for f in po/*.po.in; do \
+		cp $$f `echo $$f | sed 's/.in//'`; \
+	done
 	mv build-aux/config.rpath build-aux/config.rpath-
 	test -f ./configure || autoreconf --install
 	mv build-aux/config.rpath- build-aux/config.rpath
+
+update-po: refresh-po
+	for f in `ls po/*.po | grep -v quot.po`; do \
+		cp $$f $$f.in; \
+	done
+	git-add po/*.po.in
+	git-commit -m "Sync with TP." po/LINGUAS po/*.po.in
 
 bootstrap: autoreconf
 	./configure $(CFGFLAGS)
