@@ -34,13 +34,8 @@ COPYRIGHT_HOLDER = Simon Josefsson
 # It can be your email address, or a mailing list address where translators
 # can write to without being subscribed, or the URL of a web page through
 # which the translators can contact you.
-MSGID_BUGS_ADDRESS = bug-shishi@josefsson.org
+MSGID_BUGS_ADDRESS = bug-shishi@gnu.org
 
 # This is the list of locale categories, beyond LC_MESSAGES, for which the
 # message catalogs shall be used.  It is usually empty.
 EXTRA_LOCALE_CATEGORIES =
-
-# Avoid line numbers in *.po, but keep them in *.pot.
-MSGMERGE = msgmerge --no-location
-MSGMERGE_UPDATE = msgmerge --no-location --update
-MSGFILTER = msgfilter --no-location
